generated/SafeLangParser.java
// Generated from SafeLang.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class SafeLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		USE=1, TYPE=2, UNIT=3, PREFIX=4, WRITE=5, WRITELN=6, READ=7, FORMAT=8, 
		INTEGER=9, REAL=10, STRING=11, TRY=12, RESCUE=13, RETRY=14, END=15, TRY_ASSIGN=16, 
		DECL_ASSIGN=17, INT_DIV=18, REM=19, REAL_DIV=20, POW=21, PLUS=22, MINUS=23, 
		MUL=24, COLON=25, SEMI=26, COMMA=27, LPAREN=28, RPAREN=29, LBRACK=30, 
		RBRACK=31, REAL_LITERAL=32, INTEGER_LITERAL=33, STRING_LITERAL=34, ID=35, 
		MULTILINE_COMMENT=36, LINE_COMMENT=37, WS=38;
	public static final int
		RULE_program = 0, RULE_separator = 1, RULE_statement = 2, RULE_statementList = 3, 
		RULE_tryStmt = 4, RULE_retryStmt = 5, RULE_useStmt = 6, RULE_typeDef = 7, 
		RULE_typeDimExpr = 8, RULE_unitSpec = 9, RULE_numericType = 10, RULE_unitDef = 11, 
		RULE_prefixDef = 12, RULE_varDecl = 13, RULE_varDeclAssign = 14, RULE_assignment = 15, 
		RULE_assignOp = 16, RULE_typeRef = 17, RULE_writeStmt = 18, RULE_writelnStmt = 19, 
		RULE_exprList = 20, RULE_dimensionExpr = 21, RULE_dimensionProduct = 22, 
		RULE_dimensionPower = 23, RULE_dimensionAtom = 24, RULE_expr = 25, RULE_additive = 26, 
		RULE_multiplicative = 27, RULE_power = 28, RULE_unary = 29, RULE_primary = 30, 
		RULE_conversion = 31, RULE_conversionType = 32, RULE_formatExpr = 33, 
		RULE_readExpr = 34, RULE_literal = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "separator", "statement", "statementList", "tryStmt", "retryStmt", 
			"useStmt", "typeDef", "typeDimExpr", "unitSpec", "numericType", "unitDef", 
			"prefixDef", "varDecl", "varDeclAssign", "assignment", "assignOp", "typeRef", 
			"writeStmt", "writelnStmt", "exprList", "dimensionExpr", "dimensionProduct", 
			"dimensionPower", "dimensionAtom", "expr", "additive", "multiplicative", 
			"power", "unary", "primary", "conversion", "conversionType", "formatExpr", 
			"readExpr", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'use'", "'type'", "'unit'", "'prefix'", "'write'", "'writeln'", 
			"'read'", "'format'", "'integer'", "'real'", "'string'", "'try'", "'rescue'", 
			"'retry'", "'end'", "':=?'", "':='", "'//'", "'\\\\'", "'/'", "'^'", 
			"'+'", "'-'", "'*'", "':'", "';'", "','", "'('", "')'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "USE", "TYPE", "UNIT", "PREFIX", "WRITE", "WRITELN", "READ", "FORMAT", 
			"INTEGER", "REAL", "STRING", "TRY", "RESCUE", "RETRY", "END", "TRY_ASSIGN", 
			"DECL_ASSIGN", "INT_DIV", "REM", "REAL_DIV", "POW", "PLUS", "MINUS", 
			"MUL", "COLON", "SEMI", "COMMA", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
			"REAL_LITERAL", "INTEGER_LITERAL", "STRING_LITERAL", "ID", "MULTILINE_COMMENT", 
			"LINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SafeLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SafeLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode EOF() { return getToken(SafeLangParser.EOF, 0); }
		public List<SeparatorContext> separator() {
			return getRuleContexts(SeparatorContext.class);
		}
		public SeparatorContext separator(int i) {
			return getRuleContext(SeparatorContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEMI) {
					{
					{
					setState(72);
					separator();
					}
					}
					setState(77);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(78);
				statement();
				setState(88);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(80); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(79);
							separator();
							}
							}
							setState(82); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( _la==SEMI );
						setState(84);
						statement();
						}
						} 
					}
					setState(90);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEMI) {
					{
					{
					setState(91);
					separator();
					}
					}
					setState(96);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(97);
				match(EOF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEMI) {
					{
					{
					setState(99);
					separator();
					}
					}
					setState(104);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(105);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeparatorContext extends ParserRuleContext {
		public TerminalNode SEMI() { return getToken(SafeLangParser.SEMI, 0); }
		public SeparatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_separator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).enterSeparator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).exitSeparator(this);
		}
	}

	public final SeparatorContext separator() throws RecognitionException {
		SeparatorContext _localctx = new SeparatorContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_separator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public UseStmtContext useStmt() {
			return getRuleContext(UseStmtContext.class,0);
		}
		public TypeDefContext typeDef() {
			return getRuleContext(TypeDefContext.class,0);
		}
		public UnitDefContext unitDef() {
			return getRuleContext(UnitDefContext.class,0);
		}
		public PrefixDefContext prefixDef() {
			return getRuleContext(PrefixDefContext.class,0);
		}
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public VarDeclAssignContext varDeclAssign() {
			return getRuleContext(VarDeclAssignContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public WriteStmtContext writeStmt() {
			return getRuleContext(WriteStmtContext.class,0);
		}
		public WritelnStmtContext writelnStmt() {
			return getRuleContext(WritelnStmtContext.class,0);
		}
		public TryStmtContext tryStmt() {
			return getRuleContext(TryStmtContext.class,0);
		}
		public RetryStmtContext retryStmt() {
			return getRuleContext(RetryStmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				useStmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				typeDef();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				unitDef();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(113);
				prefixDef();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(114);
				varDecl();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(115);
				varDeclAssign();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(116);
				assignment();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(117);
				writeStmt();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(118);
				writelnStmt();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(119);
				tryStmt();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(120);
				retryStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementListContext extends ParserRuleContext {
		public List<SeparatorContext> separator() {
			return getRuleContexts(SeparatorContext.class);
		}
		public SeparatorContext separator(int i) {
			return getRuleContext(SeparatorContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).enterStatementList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).exitStatementList(this);
		}
	}

	public final StatementListContext statementList() throws RecognitionException {
		StatementListContext _localctx = new StatementListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statementList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMI) {
				{
				{
				setState(123);
				separator();
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 34359758974L) != 0)) {
				{
				{
				setState(129);
				statement();
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEMI) {
					{
					{
					setState(130);
					separator();
					}
					}
					setState(135);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TryStmtContext extends ParserRuleContext {
		public TerminalNode TRY() { return getToken(SafeLangParser.TRY, 0); }
		public List<StatementListContext> statementList() {
			return getRuleContexts(StatementListContext.class);
		}
		public StatementListContext statementList(int i) {
			return getRuleContext(StatementListContext.class,i);
		}
		public TerminalNode END() { return getToken(SafeLangParser.END, 0); }
		public TerminalNode RESCUE() { return getToken(SafeLangParser.RESCUE, 0); }
		public TryStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tryStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).enterTryStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).exitTryStmt(this);
		}
	}

	public final TryStmtContext tryStmt() throws RecognitionException {
		TryStmtContext _localctx = new TryStmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tryStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(TRY);
			setState(142);
			statementList();
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RESCUE) {
				{
				setState(143);
				match(RESCUE);
				setState(144);
				statementList();
				}
			}

			setState(147);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RetryStmtContext extends ParserRuleContext {
		public TerminalNode RETRY() { return getToken(SafeLangParser.RETRY, 0); }
		public RetryStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_retryStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).enterRetryStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).exitRetryStmt(this);
		}
	}

	public final RetryStmtContext retryStmt() throws RecognitionException {
		RetryStmtContext _localctx = new RetryStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_retryStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(RETRY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UseStmtContext extends ParserRuleContext {
		public TerminalNode USE() { return getToken(SafeLangParser.USE, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(SafeLangParser.STRING_LITERAL, 0); }
		public UseStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).enterUseStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).exitUseStmt(this);
		}
	}

	public final UseStmtContext useStmt() throws RecognitionException {
		UseStmtContext _localctx = new UseStmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_useStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(USE);
			setState(152);
			match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeDefContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(SafeLangParser.TYPE, 0); }
		public TerminalNode ID() { return getToken(SafeLangParser.ID, 0); }
		public TerminalNode COLON() { return getToken(SafeLangParser.COLON, 0); }
		public NumericTypeContext numericType() {
			return getRuleContext(NumericTypeContext.class,0);
		}
		public UnitSpecContext unitSpec() {
			return getRuleContext(UnitSpecContext.class,0);
		}
		public TypeDimExprContext typeDimExpr() {
			return getRuleContext(TypeDimExprContext.class,0);
		}
		public TypeDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).enterTypeDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).exitTypeDef(this);
		}
	}

	public final TypeDefContext typeDef() throws RecognitionException {
		TypeDefContext _localctx = new TypeDefContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_typeDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(TYPE);
			setState(155);
			match(ID);
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACK) {
				{
				setState(156);
				unitSpec();
				}
			}

			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DECL_ASSIGN) {
				{
				setState(159);
				typeDimExpr();
				}
			}

			setState(162);
			match(COLON);
			setState(163);
			numericType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeDimExprContext extends ParserRuleContext {
		public TerminalNode DECL_ASSIGN() { return getToken(SafeLangParser.DECL_ASSIGN, 0); }
		public DimensionExprContext dimensionExpr() {
			return getRuleContext(DimensionExprContext.class,0);
		}
		public TypeDimExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDimExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).enterTypeDimExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).exitTypeDimExpr(this);
		}
	}

	public final TypeDimExprContext typeDimExpr() throws RecognitionException {
		TypeDimExprContext _localctx = new TypeDimExprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_typeDimExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(DECL_ASSIGN);
			setState(166);
			dimensionExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnitSpecContext extends ParserRuleContext {
		public TerminalNode LBRACK() { return getToken(SafeLangParser.LBRACK, 0); }
		public List<TerminalNode> ID() { return getTokens(SafeLangParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SafeLangParser.ID, i);
		}
		public TerminalNode RBRACK() { return getToken(SafeLangParser.RBRACK, 0); }
		public TerminalNode COMMA() { return getToken(SafeLangParser.COMMA, 0); }
		public UnitSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unitSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).enterUnitSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).exitUnitSpec(this);
		}
	}

	public final UnitSpecContext unitSpec() throws RecognitionException {
		UnitSpecContext _localctx = new UnitSpecContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_unitSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(LBRACK);
			setState(169);
			match(ID);
			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(170);
				match(COMMA);
				setState(171);
				match(ID);
				}
			}

			setState(174);
			match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NumericTypeContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(SafeLangParser.INTEGER, 0); }
		public TerminalNode REAL() { return getToken(SafeLangParser.REAL, 0); }
		public TerminalNode LBRACK() { return getToken(SafeLangParser.LBRACK, 0); }
		public TerminalNode INTEGER_LITERAL() { return getToken(SafeLangParser.INTEGER_LITERAL, 0); }
		public TerminalNode RBRACK() { return getToken(SafeLangParser.RBRACK, 0); }
		public NumericTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numericType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).enterNumericType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafeLangListener ) ((SafeLangListener)listener).exitNumericType(this);
		}
	}

	public final NumericTypeContext numericType() throws RecognitionException {
		NumericTypeContext _localctx = new NumericTypeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_numericType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			_la = _input.LA(1);
			if ( !(_la==INTEGER || _la==REAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACK) {
				{
				setState(177);
				match(LBRACK);
				setState(178);
				match(INTEGER_LITERAL);
				setState(179);
				match(RBRACK);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
